--- a/pages/setting/change-name/index.wxml
+++ b/pages/setting/change-name/index.wxml
@@ -1,9 +1,9 @@
 <view class="container">
     <view class="name">
-        <input type="text" maxlength="20" placeholder-class="placeholder-color" placeholder="请输入昵称" bindinput="getNewName"/>
+        <input type="text" maxlength="20" placeholder-class="placeholder-color" placeholder="  {{type==1?'请输入昵称':'输入您的签名'}}" bindinput="getNewName"/>
     </view>
     <view>
-        输入一个响亮的昵称
+        {{type==1?'输入一个响亮的昵称':'输入您的个性签名'}}
     </view>
     <view class="defaultBtn flex-center" bindtap="saveName">
             保存
