--- a/app.wxss
+++ b/app.wxss
@@ -2,13 +2,13 @@
 
 page {
 
-    display:flex;
+    display: flex;
     flex-direction: column;
-    background-color:#F5F5F5;
+    background-color: #F5F5F5;
 }
 
 .container {
-    height:100%;
+    height: 100%;
     box-sizing: border-box;
     color: #333;
     font-family: helvetica, 'Heiti SC', PingFangSC-Light;
@@ -69,10 +69,14 @@ page {
 .defaultBtn {
     width: 689rpx;
     height: 90rpx;
-    background: linear-gradient(246deg, rgba(248, 151, 120, 1) 0%, rgba(241, 75, 127, 1) 100%);
+    background: rgba(30, 193, 154, 1);
     box-shadow: 0 2rpx 12rpx 0rpx rgba(241, 75, 127, 0.35);
     border-radius: 46rpx;
-
+    color: #fff;
+    font-size: 32rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .cutTxt {
@@ -117,28 +121,53 @@ image {
 }
 
 /*性别图片*/
-.lv1{
-    width:44rpx;
-    height:28rpx;
-    margin-right:12rpx;
+.lv1 {
+    width: 44rpx;
+    height: 28rpx;
+    margin-right: 12rpx;
 }
+
 /*vip图片*/
-.lv2{
-    width:88rpx;
-    height:28rpx;
-    position:absolute;
-    top:0;left:0;
+.lv2 {
+    width: 88rpx;
+    height: 28rpx;
+    position: absolute;
+    padding-left: 12rpx;
+    top: 0;
+    left: 0;
 }
 
-.noData{
-    width:150rpx;
-    height:150rpx;
+.noData {
+    width: 150rpx;
+    height: 150rpx;
 
 }
 
-.lady{
-    width:44rpx;
-    height:28rpx;
+.lady {
+    width: 44rpx;
+    height: 28rpx;
 }
 
+.addBorder-bottom {
+    border-bottom: 2rpx solid #ededed;
+}
+
+.addBorder-top {
+    border-top: 2rpx solid #ededed;
+}
+
+.v-ani-box {
+    /*opacity: 0;*/
+    transform: translateY(600px);
+    visibility: hidden;
+    pointer-events: none;
+    transition:all 0.2s cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+
+.v-ani-box.v-ani-show {
+    /*opacity: 1;*/
+    transform: translateY(0px);
+    visibility: visible;
+    pointer-events: auto;
+}
 
