--- a/components/modal/modal.wxml
+++ b/components/modal/modal.wxml
@@ -1,6 +1,6 @@
 <view class="skillLeave" >
     <view class="modal"></view>
-    <view class="content">
+    <view class="content" style="min-height:{{modalHeight?modalHeight+'rpx':'1000rpx'}}">
         <view class="flex-box flex-space flex-y-center skill-title">
             <image src="../../images/icon/cancel2.png" class="cancel" bindtap="closeModal"></image>
             <view style="font-weight:700">{{title}}</view>
