--- a/pages/order/orderDetail/detail.wxss
+++ b/pages/order/orderDetail/detail.wxss
@@ -1,7 +1,10 @@
+page {
+    font-family: PingFangSC-Regular, PingFang SC;
+}
 
 .header {
     min-height: 458rpx;
-    background: linear-gradient(180deg, rgba(30, 193, 154, 1) 0%, rgba(57, 219, 180, 0) 100%);
+    background: linear-gradient(180deg, rgba(30, 193, 154, 1) 30%, rgba(57, 219, 180, 0) 100%);
     text-align: center;
     padding-top: 80rpx;
 }
@@ -28,6 +31,19 @@
     position: relative;
     top: -240rpx;
     box-sizing: border-box;
+}
+
+.order-user .btn {
+    width: 148rpx;
+    height: 56rpx;
+    border-radius: 28rpx;
+    border: 2rpx solid rgba(30, 193, 154, 1);
+    color: #1ec19a;
+    font-size: 24rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 32rpx;
 }
 
 .content .order-new {
@@ -59,24 +75,156 @@
     padding: 36rpx 32rpx 36rpx 0;
     font-size: 26rpx;
     color: #333;
-    font-weight:600;
+
     border-bottom: 2rpx solid #ededed;
 }
-.order-price .coupon text{
-    color:#aaa;
+
+
+.order-price .coupon text {
+    color: #aaa;
     font-weight: normal;
 }
-.order-price .coupon image{
-    width:32rpx;
-    height:32rpx;
-    margin-right:12rpx;
-}
-.order-price .coupon .txt{
-    color:#1ec19a;
-    font-weight:600;
+
+.order-price image {
+    width: 32rpx;
+    height: 32rpx;
+    margin-right: 12rpx;
 }
 
-.order-price .price{
-    font-size:26rpx;
-    color:#999;
+.order-price .coupon .txt {
+    color: #1ec19a;
+    font-weight: 600;
+}
+
+.order-price .price {
+    font-size: 26rpx;
+    color: #999;
+    font-weight: normal;
+}
+
+.order-price .price .p1 {
+
+    color: #FF7171;
+}
+
+.order-price .price .p2 {
+
+    color: #333;
+}
+
+.order-num {
+    background: #fff;
+    border-radius: 16rpx;
+    padding: 32rpx;
+    min-height: 162rpx;
+    margin-top: 20rpx;
+    font-size: 26rpx;
+    color: #aaa;
+    box-sizing: border-box;
+}
+
+.order-num .copy {
+    width: 76rpx;
+    height: 40rpx;
+    background: rgba(255, 255, 255, 1);
+    border-radius: 8rpx;
+    border: 2rpx solid rgba(222, 222, 222, 1);
+    color: #999;
+    font-size: 24rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 30rpx;
+}
+
+.recommend {
+    position: relative;
+    top: -200rpx;
+    padding: 0 32rpx;
+    font-size: 30rpx;
+    color: #333;
+    font-weight: 700;
+}
+
+.toastModal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+}
+
+.toastModal .mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .5);
+
+}
+
+.toastModal .Modal {
+    width: 100%;
+
+    background: rgba(255, 255, 255, 1);
+    border-top-left-radius: 32rpx;
+    border-top-right-radius: 32rpx;
+    z-index: 10;
+    position: relative;
+    padding: 64rpx 0 26rpx;
+}
+
+.toastModal .Modal .cancel {
+    width: 24rpx;
+    height: 24rpx;
+
+}
+
+.toastModal .Modal .sure {
+    width: 100rpx;
+    height: 56rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 28rpx;
+    border: 2rpx solid rgba(241, 75, 127, 1);
+    color: #F14B7F;
+    font-size: 24rpx;
+
+}
+
+.toastModal .Modal .notice {
+    text-align: center;
+    font-size: 24rpx;
+    color: #aaa;
+}
+
+.toastModal .Modal .row {
+    box-sizing: border-box;
+    height: 160rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 28rpx;
+    color: #333;
+    font-weight: 700;
+}
+
+.toastModal .Modal .row .gou image {
+    width: 32rpx;
+    height: 32rpx;
+
+}
+
+.toastModal .Modal .row .gou {
+    width: 64rpx;
+    height: 64rpx;
+    display: flex;
+    align-items: center;
 }
