--- a/pages/setting/change-date/index.wxml
+++ b/pages/setting/change-date/index.wxml
@@ -1,32 +1,27 @@
-<view class="container">
+<view class="container" >
     <view>
-        <view class="row" bindtap="showModalComponent">
-            <view>选择出生日期</view>
-            <view>
-                <image src="../../../images/icon/right.png" class="icon"></image>
-            </view>
-        </view>
+
         <view class="row">
             <view>年龄</view>
-            <view>{{showData.age}}</view>
+            <view>{{showData.userAge}}</view>
         </view>
         <view class="row">
             <view>星座</view>
-            <view>{{showData.constellation}}</view>
+            <view>{{showData.userStarseat}}</view>
         </view>
     </view>
-    <modal title="选择年龄" bind:PostStatus="getStatus" wx:if="{{showModal}}">
+    <modal title="选择年龄" bind:PostStatus="getStatus"  modalHeight="600">
         <view class="page-body" slot="content">
             <!--<view class="selected-date">{{year}}年{{month}}月{{day}}日</view>-->
             <picker-view indicator-style="height: 50px;" style="width: 100%; height: 300px;" value="{{valueArr}}" bindchange="bindChange">
                 <picker-view-column>
-                    <view wx:for="{{years}}" wx:key="{{years}}" style="line-height: 50px; text-align: center;">{{item}}年</view>
+                    <view wx:for="{{years}}" wx:key="years" style="line-height: 50px; text-align: center;">{{item}}年</view>
                 </picker-view-column>
                 <picker-view-column>
-                    <view wx:for="{{months}}" wx:key="{{months}}" style="line-height: 50px; text-align: center;">{{item}}月</view>
+                    <view wx:for="{{months}}" wx:key="months" style="line-height: 50px; text-align: center;">{{item}}月</view>
                 </picker-view-column>
                 <picker-view-column>
-                    <view wx:for="{{days}}" wx:key="{{days}}" style="line-height: 50px; text-align: center;">{{item}}日</view>
+                    <view wx:for="{{days}}" wx:key="days" style="line-height: 50px; text-align: center;">{{item}}日</view>
                 </picker-view-column>
 
             </picker-view>
