--- a/pages/setting/index.wxss
+++ b/pages/setting/index.wxss
@@ -1,55 +1,68 @@
-.container{
-  padding:34rpx 40rpx;
-  height:auto;
-  box-sizing: border-box;
-}
-page{
-  height:auto
-}
-.page-font{
-  font-size:24rpx;
-  color:#aaa;
-  margin-bottom:24rpx;
-}
-.page-img{
-  width:260rpx;
-  height:260rpx;
-  border-radius:8rpx;
-}.page-img2{
-  width:320rpx;
-  height:320rpx;
-  border-radius:8rpx;
+.container {
+    padding: 34rpx 40rpx;
+    height: auto;
+    box-sizing: border-box;
+
 }
 
- .row{
-   display:flex;
-   justify-content: space-between;
-   align-items: center;
-   color:#333;
-   font-size:30rpx;
-   border-bottom:2rpx solid #EDEDED;
-   height:102rpx;
- }
-.row .font2{
-   color:#666;
- }
-.row .font1{
-   color:#CECECE;
- }
-
-.row .icon{
-    width:24rpx;
-  height:22rpx;
-  margin-left:8rpx;
- }
-
-.defaultBtn{
-  color:#fff;
-  font-size:30rpx;
-  margin-top:120rpx;
+page {
+    height: auto;
+    background-color: #fff;
 }
 
-.row .flex-center{
-    flex:1;
+.page-font {
+    font-size: 24rpx;
+    color: #aaa;
+    margin-bottom: 24rpx;
+}
+
+.page-img {
+    width: 260rpx;
+    height: 260rpx;
+    border-radius: 8rpx;
+}
+
+.page-img2 {
+    width: 326rpx;
+    height: 264rpx;
+    border-radius: 8rpx;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #333;
+    font-size: 30rpx;
+    border-bottom: 2rpx solid #EDEDED;
+    height: 102rpx;
+}
+.row ::placeholder{
+    color: #CECECE;
+}
+.row .font2 {
+    color: #666;
+    text-align: right;
+}
+
+.row .font1 {
+    color: #CECECE;
+
+}
+
+.row .icon {
+    width: 24rpx;
+    height: 22rpx;
+    margin-left: 8rpx;
+}
+
+.defaultBtn {
+    color: #fff;
+    font-size: 30rpx;
+    margin-top: 120rpx;
+}
+
+.row .flex-center {
+    flex: 1;
     justify-content: flex-end;
 }
