--- a/pages/training-space/index.wxss
+++ b/pages/training-space/index.wxss
@@ -14,7 +14,7 @@
     display: flex;
     align-items: flex-end;
     padding: 0 32rpx;
-    background:#fff  trans;
+    background:#fff;
 }
 
 .head-img {
