--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -36,7 +36,7 @@
     <view class="content">
         <!--订单 优惠券和钱包按钮-->
         <view class="list flex-box flex-space">
-            <view style="flex:1" class="flex-center flex-colomn" wx:for="{{list}}" wx:key="index">
+            <view style="flex:1" class="flex-center flex-colomn" wx:for="{{list}}" wx:key="index" bindtap="tapList" data-current="{{index}}">
                 <image src="{{item.url}}"></image>
                 <view>
                     {{item.text}}
@@ -45,7 +45,7 @@
         </view>
         <!--设置列表-->
         <view class="settingList">
-              <view class="flex-box flex-space list-row" wx:for="{{settingList}}" wx:key="index">
+              <view class="flex-box flex-space list-row" wx:for="{{settingList}}" wx:key="index" bindtap="tapSettingList" data-current="{{index}}">
                   <image src="{{item.url}}" class="left-png"></image>
                   <view class="flex-box flex-space row-item">
 
